# mklfs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  mklfs.c
.github/workflows/: build.yml
src/: mklfs.c
